<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WordSlam</string>
    <string name="test">Q</string>
    <string name="NewOneGame">New Single Player Game</string>
    <string name="NewTwoGame">New Two Player Game  </string>
    <string name="Quit">Quit</string>
    <string name="MainMenu">Main Menu</string>
    <string name="WordsFound"><u>Found Words</u></string>
    <string name="Loading">Loading New Game...</string>
    <string name="Submit">Done!</string>
    <string name="ResultsWordsFound">Words Found!</string>
    <string name="ResultsWordsYouFound">Words You Found</string>
    <string name="ResultsWordsTheyFound">Words They Found</string>
    <string name="ResultsWordsMissed">Words Missed...</string>
    <string-array name="game_times">
        <item>No limit</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>
        <string name="score">Score: </string>
        <string name="Settings">Settings</string>
        <string name="SubmitSettings">Ok</string>
    <string-array name="multi_game_times">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>
    	<string name="TheirScore">Their\nScore</string>
    	<string name="TheirWordsFound"><u>Their\nFound Words</u></string>
        <string name="YourScore">Your\nScore</string>
        <string name="YourWordsFound"><u>Your\nFound Words</u></string>
</resources>
