<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:weightSum="1">
		<LinearLayout
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/linearLayout1"
				android:layout_weight="0.24"
				android:paddingTop="40dp">
				<TextView
						android:layout_height="wrap_content"
						android:textSize="30dp"
						android:id="@+id/textView1"
						android:layout_width="wrap_content"
						android:text="@string/MainMenu"
						android:textStyle="bold"></TextView>
		</LinearLayout>
		<LinearLayout
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/linearLayout2"
				android:paddingTop="20dp"
				android:layout_weight="0.24"
				android:paddingBottom="20dp"
				android:orientation="vertical"
				android:paddingLeft="50dp"
				android:paddingRight="50dp">
				<Button
						android:text="@string/NewOneGame"
						android:id="@+id/btnNewOneGame"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:maxHeight="30dp" android:gravity="center"></Button>
				<Button
						android:text="@string/NewTwoGame"
						android:id="@+id/btnNewTwoGame"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:layout_marginTop="10dp"
						android:maxHeight="30dp"
						android:gravity="center"></Button>
				<Button
						android:id="@+id/btnQuit"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:layout_marginTop="10dp"
						android:text="@string/Quit"
						android:maxHeight="30dp"></Button>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:id="@+id/linearLayout3"
				android:paddingLeft="40dp"
				android:paddingRight="40dp"
				android:layout_height="98dp"
				android:paddingTop="20dp"
				android:gravity="center">
				<ImageView
						android:src="@drawable/abc"
						android:id="@+id/imageView1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:scaleType="fitXY"></ImageView>
		</LinearLayout>

</LinearLayout>
