<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
				android:id="@+id/linearLayout1"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:padding="10dp"
				android:layout_weight="1">
				<LinearLayout
						android:id="@+id/linearLayout2"
						android:layout_height="match_parent"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_weight="1" android:layout_marginRight="2dp">
						<TextView
								android:layout_height="wrap_content"
								android:id="@+id/tvWordsFound"
								android:layout_width="match_parent"
								android:gravity="center"
								android:text="@string/ResultsWordsFound" android:textColor="#336666" android:layout_marginBottom="3dp" android:textStyle="bold"></TextView>
						<TextView
								android:text="TextView"
								android:id="@+id/tvResults"
								android:focusable="false"
								android:layout_height="match_parent"
								android:layout_width="match_parent"
								android:background="@drawable/back"
								android:scrollbars="vertical" android:layout_marginRight="3dp" android:padding="5dp"></TextView>
				</LinearLayout>
				<LinearLayout
						android:id="@+id/linearLayout3"
						android:layout_height="match_parent"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_weight="1">
						<TextView
								android:layout_height="wrap_content"
								android:id="@+id/tvWordsMissed"
								android:layout_width="match_parent"
								android:gravity="center"
								android:text="@string/ResultsWordsMissed" android:textColor="#336666" android:layout_marginBottom="3dp" android:textStyle="bold"></TextView>
						<TextView
								android:text="TextView"
								android:id="@+id/tvResultsMissed"
								android:layout_height="match_parent"
								android:layout_width="match_parent"
								android:background="@drawable/back"
								android:scrollbars="vertical" android:scrollbarStyle="insideOverlay" android:layout_marginLeft="3dp" android:padding="5dp"></TextView>
				</LinearLayout>
		</LinearLayout>
		<LinearLayout
				android:id="@+id/linearLayout4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center">
				<Button
						android:id="@+id/btnMainMenu"
						android:text="@string/MainMenu"
						android:layout_height="35dp"
						android:layout_width="100dp"></Button>
		</LinearLayout>

</LinearLayout>
