<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:id="@+id/bottomLayer"
		android:padding="5dp">
		<LinearLayout
				android:id="@+id/linearLayout8"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:weightSum="1"
				android:gravity="center">
				<LinearLayout
						android:gravity="left"
						android:id="@+id/linearLayout7"
						android:layout_height="match_parent"
						android:weightSum="1"
						android:layout_marginRight="2dp" android:layout_width="match_parent" android:layout_weight="1" android:orientation="horizontal">
						<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearLayoutLeft" android:layout_weight=".5">
							<TextView android:layout_width="wrap_content" android:id="@+id/tvGridTitle" android:textSize="12dp" android:textColor="#339933" android:gravity="center" android:text="@string/YourWordsFound" android:textStyle="bold" android:layout_height="wrap_content" android:layout_marginRight="6dp"></TextView>
							<ScrollView android:layout_width="match_parent" android:fillViewport="true" android:id="@+id/ScrollViewLeft" android:layout_height="190dp" android:layout_weight=".5">
								<TextView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@+id/tvWordsFound" android:scrollbarStyle="insideOverlay" android:textSize="20dp" android:textColor="#339933" android:gravity="center" android:scrollbars="vertical" android:layout_height="fill_parent" android:layout_width="83dp"></TextView>
							</ScrollView>
							<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutScoreLeft" android:layout_marginTop="10dp" android:gravity="center_vertical|center">
								<TextView android:layout_width="wrap_content" android:id="@+id/tvYourScore" android:textSize="10dp" android:textColor="#339933" android:gravity="center" android:text="@string/score" android:layout_height="wrap_content" android:layout_marginRight="5dp"></TextView>
								<TextView android:layout_width="30dp" android:id="@+id/tvScore" android:background="@drawable/back" android:textSize="10dp" android:gravity="center_vertical|center_horizontal" android:layout_height="25dp" android:padding="2dp"></TextView>
							</LinearLayout>
						</LinearLayout>
						<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearLayoutRight" android:layout_weight=".5">
							<TextView android:layout_width="wrap_content" android:layout_marginLeft="6dp" android:id="@+id/tvGridTitleRight" android:textSize="12dp" android:textColor="#CC0000" android:gravity="center" android:text="@string/TheirWordsFound" android:textStyle="bold" android:layout_height="wrap_content"></TextView>
							<ScrollView android:layout_width="match_parent" android:fillViewport="true" android:id="@+id/ScrollViewRight" android:layout_weight=".5" android:layout_height="190dp">
								<TextView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@+id/tvOpponentWordsFound" android:scrollbarStyle="insideOverlay" android:textSize="20dp" android:textColor="#CC0000" android:gravity="center" android:scrollbars="vertical" android:layout_height="fill_parent" android:layout_width="92dp"></TextView>
							</ScrollView>
							<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutScoreRight" android:layout_marginTop="10dp" android:gravity="center_vertical|center">
								<TextView android:layout_width="wrap_content" android:id="@+id/tvTheirScore" android:textSize="10dp" android:textColor="#CC0000" android:gravity="center" android:text="@string/score" android:layout_height="wrap_content" android:layout_marginRight="5dp"></TextView>
								<TextView android:layout_width="30dp" android:id="@+id/tvScore2" android:background="@drawable/back" android:textSize="10dp" android:gravity="center_vertical|center_horizontal" android:layout_height="25dp" android:padding="2dp"></TextView>
							</LinearLayout>
						</LinearLayout>
				</LinearLayout>
				<android.gesture.GestureOverlayView
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/gestures"
						android:layout_height="fill_parent"
						android:eventsInterceptionEnabled="true"
						android:orientation="vertical"
						android:gestureStrokeAngleThreshold="0.0"
						android:gestureStrokeSquarenessThreshold="0.0"
						android:layout_width="wrap_content">
						<LinearLayout
								android:layout_height="fill_parent"
								android:id="@+id/linearLayout6"
								android:orientation="vertical"
								android:layout_width="wrap_content" android:gravity="center_vertical">
								<LinearLayout
										android:gravity="right"
										android:layout_height="wrap_content"
										android:id="@+id/linearLayout1"
										android:layout_width="match_parent">
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton1"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton2"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton3"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton4"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton5"></psu.se.wordslam.GridButton>
								</LinearLayout>
								<LinearLayout
										android:gravity="right"
										android:layout_height="wrap_content"
										android:id="@+id/linearLayout2"
										android:layout_width="match_parent">
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton6"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton7"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												style="@style/letterButtons"
												android:id="@+id/GridButton8"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton9"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton10"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
								</LinearLayout>
								<LinearLayout
										android:gravity="right"
										android:layout_height="wrap_content"
										android:id="@+id/linearLayout3"
										android:layout_width="match_parent">
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton11"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton12"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton13"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton14"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton15"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
								</LinearLayout>
								<LinearLayout
										android:gravity="right"
										android:layout_height="wrap_content"
										android:id="@+id/linearLayout4"
										android:layout_width="match_parent">
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton16"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton17"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton18"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton19"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton20"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
								</LinearLayout>
								<LinearLayout
										android:gravity="right"
										android:layout_height="wrap_content"
										android:id="@+id/linearLayout5"
										android:layout_width="match_parent">
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton21"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton22"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton23"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton24"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
										<psu.se.wordslam.GridButton
												android:id="@+id/GridButton25"
												style="@style/letterButtons"></psu.se.wordslam.GridButton>
								</LinearLayout>
						</LinearLayout>
				</android.gesture.GestureOverlayView>
				<LinearLayout
						android:id="@+id/timerUI"
						android:background="#00FF00"
						android:keepScreenOn="false"
						android:layout_marginLeft="5dp"
						android:layout_width="35dp" android:layout_gravity="bottom" android:layout_height="fill_parent">
				</LinearLayout>
		</LinearLayout>
</LinearLayout>
